fix code blocks overflow and remove nprogress spinner

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,11 @@ html {
 }
 
 #nprogress .bar {
-	@apply bg-black;
+	background: black;
+}
+
+#nprogress .spinner {
+	display: none;
 }
 
 .TOC-highlighted::after {
